# private_rag

./: .env.example  .gitignore  README.md  pyproject.toml
api/: main.py
core/: __init__.py  config.py  engine.py  indexer.py
core/ingestion/: __init__.py  loader.py
